--- a/Extism/Changes
+++ b/Extism/Changes
@@ -1,6 +1,9 @@
 Revision history for Extism
 
 v0.3.0  2024-12-11
+        Explicitly use POSIX in t/02-extism.t
+
+v0.3.0  2024-12-11
         Add per call host context
         Add setting fuel_limit to Extism::Plugin->new
         Add allow_http_response_headers to Plugin->new to allow plugins
